--- a/atef/ui/comparison_page.ui
+++ b/atef/ui/comparison_page.ui
@@ -15,7 +15,14 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QWidget" name="name_desc_tags_placeholder" native="true"/>
+    <widget class="QWidget" name="name_desc_tags_placeholder" native="true">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="Line" name="line">
