--- a/atef/ui/config_value_edit.ui
+++ b/atef/ui/config_value_edit.ui
@@ -137,7 +137,26 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="float_input"/>
+      <widget class="QDoubleSpinBox" name="float_input">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+       <property name="decimals">
+        <number>4</number>
+       </property>
+       <property name="minimum">
+        <double>-2147483647.000000000000000</double>
+       </property>
+       <property name="maximum">
+        <double>2147483647.000000000000000</double>
+       </property>
+      </widget>
      </item>
      <item>
       <widget class="QSpinBox" name="int_input">
