--- a/atef/ui/find_replace_row_widget.ui
+++ b/atef/ui/find_replace_row_widget.ui
@@ -59,7 +59,7 @@
       <widget class="QLabel" name="pre_label">
        <property name="minimumSize">
         <size>
-         <width>75</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
@@ -69,7 +69,7 @@
       </widget>
      </item>
      <item>
-      <widget class="PyDMDrawingLine" name="arrow" native="true">
+      <widget class="PyDMDrawingLine" name="arrow">
        <property name="minimumSize">
         <size>
          <width>20</width>
