--- a/atef/ui/find_replace_widget.ui
+++ b/atef/ui/find_replace_widget.ui
@@ -15,6 +15,27 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_5">
+     <property name="topMargin">
+      <number>5</number>
+     </property>
+     <item>
+      <widget class="QPushButton" name="open_input_file_button">
+       <property name="text">
+        <string>Choose Input File</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="open_output_file_button">
+       <property name="text">
+        <string>Choose Outupt File</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
     <layout class="QHBoxLayout" name="horizontalLayout_4">
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -124,9 +145,9 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="open_file_button">
+      <widget class="QPushButton" name="save_button">
        <property name="text">
-        <string>Open File</string>
+        <string>Save to Output File</string>
        </property>
       </widget>
      </item>
