--- a/atef/ui/results_summary.ui
+++ b/atef/ui/results_summary.ui
@@ -75,6 +75,13 @@
           </layout>
          </item>
          <item>
+          <widget class="Line" name="line">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+          </widget>
+         </item>
+         <item>
           <layout class="QFormLayout" name="formLayout">
            <property name="rightMargin">
             <number>5</number>
@@ -110,6 +117,20 @@
             <widget class="QWidget" name="type_combo_placeholder" native="true"/>
            </item>
           </layout>
+         </item>
+         <item>
+          <widget class="Line" name="line_2">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QToolButton" name="refresh_button">
+           <property name="text">
+            <string>...</string>
+           </property>
+          </widget>
          </item>
         </layout>
        </item>
