MNT: expand EditTree by default, add copy-to-clipboard button, hide success by default, quote any piece of data with a comma for csv parsing

--- a/atef/ui/results_summary.ui
+++ b/atef/ui/results_summary.ui
@@ -156,11 +156,22 @@ p, li { white-space: pre-wrap; }
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="save_text_button">
-         <property name="text">
-          <string>Save Text Output</string>
-         </property>
-        </widget>
+        <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <item>
+          <widget class="QPushButton" name="save_text_button">
+           <property name="text">
+            <string>Save Text Output</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="clipboard_button">
+           <property name="text">
+            <string>Copy to Clipboard</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
       </layout>
      </widget>
