--- a/atef/ui/paged_table.ui
+++ b/atef/ui/paged_table.ui
@@ -42,14 +42,15 @@
      </item>
      <item>
       <widget class="QLabel" name="page_count_label">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-         <horstretch>1</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
        <property name="text">
         <string>/ 0</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="search_edit">
+       <property name="placeholderText">
+        <string>Search by name</string>
        </property>
       </widget>
      </item>
