--- a/atef/ui/pv_configuration_page.ui
+++ b/atef/ui/pv_configuration_page.ui
@@ -144,25 +144,7 @@
          <number>0</number>
         </property>
         <item>
-         <widget class="QTableWidget" name="comparisons_table">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <attribute name="horizontalHeaderStretchLastSection">
-           <bool>true</bool>
-          </attribute>
-          <attribute name="verticalHeaderVisible">
-           <bool>false</bool>
-          </attribute>
-          <column>
-           <property name="text">
-            <string>Comparisons</string>
-           </property>
-          </column>
-         </widget>
+         <widget class="QWidget" name="comparisons_table_placeholder" native="true"/>
         </item>
         <item>
          <widget class="QPushButton" name="add_comparison_button">
