--- a/atef/ui/tool_configuration_page.ui
+++ b/atef/ui/tool_configuration_page.ui
@@ -69,19 +69,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QTableWidget" name="comparisons_table">
-     <attribute name="horizontalHeaderStretchLastSection">
-      <bool>true</bool>
-     </attribute>
-     <attribute name="verticalHeaderVisible">
-      <bool>false</bool>
-     </attribute>
-     <column>
-      <property name="text">
-       <string>Comparisons</string>
-      </property>
-     </column>
-    </widget>
+    <widget class="QWidget" name="comparisons_table_placeholder" native="true"/>
    </item>
    <item>
     <widget class="QPushButton" name="add_comparison_button">
