--- a/atef/ui/pv_configuration_page.ui
+++ b/atef/ui/pv_configuration_page.ui
@@ -144,7 +144,7 @@
          <number>0</number>
         </property>
         <item>
-         <widget class="QWidget" name="comparisons_table_placeholder" native="true"/>
+         <widget class="PagedTableWidget" name="comparisons_table" native="true"/>
         </item>
         <item>
          <widget class="QPushButton" name="add_comparison_button">
@@ -160,6 +160,14 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>PagedTableWidget</class>
+   <extends>QWidget</extends>
+   <header>atef.widgets.config.paged_table</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
